[tool.poetry]
name = "examon-core"
version = "0.1.23"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"
packages = [{include = "examon_core"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
