[tool.poetry]
name = "pyquiz"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygments = "^2.13.0"
inquirer = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
