[tool.poetry]
name = "pyquiz"
version = "0.2.5"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
pygments = "^2.13.0"
inquirer = "^3.1.1"
examon-core = "0.1.23"
examon-repo-1 = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
